--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -9,11 +9,19 @@
 }
 
 .box-layout__box {
-    background: fade-out(white, .15);
-    border-radius: 3px;
+    background: fade-out(#ace7f2, .15);
     padding: $l-size $m-size;
     text-align: center;
-    width: 25rem;
+    height: 50rem;
+    width: 35rem;
+    border-radius: 5%;
+    box-shadow: 5px 10px 8px #888888;
+
+    p {
+        font-size: 2.3rem;
+        font-family: 'Nanum Gothic Coding', monospace;
+    }
+
 }
 
 .box-layout__title {
