Add color variables

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,7 +3,9 @@ $dark-grey: #333;
 $grey: #666;
 $blue: #1c88bf;
 $dark-blue: #364051;
+$light-grey: #EEEEEE;
 $off-white: #f7f7f7;
+$light-blue-transparent: rgba(172, 231, 242, 0.45);
 
 //Font Size
 $font-size-large: 1.8rem;
