--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,11 @@
 .header {
-    background: $dark-blue;
+    background: $light-blue-transparent;
+    box-shadow: 2px 3px 8px #888888;
+    
+    img{
+        width: 96px;
+        height: 69px;
+    }
 }
 
 .header__content {
